# Suggester

./: .bazelignore  .dockerignore  .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .prettierrc.js  BOTLISTS.md  BUILD.bazel  Dockerfile  LICENSE.md  README.md  SECURITY.md  WORKSPACE.bazel  bot.js  config.json.example  config_example.toml  coreFunctions.js  docker-compose.dev.yml  docker-compose.yml  index.js  nodemon.json  nx.json  package-lock.json  package.json  persistent.json  persistent.json.example  pnpm-lock.yaml  test.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: ci.yml
.husky/: pre-commit
commands/: acknowledgement.js  acomment.js  approve.js  attach.js  bean.js  blacklist.js  botconfig.js  comment.js  config.js  configserver.js  delete.js  deletecomment.js  deny.js  deploy.js  eval.js  globalban.js  help.js  info.js  invite.js  listqueue.js  mark.js  massapprove.js  massdelete.js  massdeny.js  megabean.js  nukebean.js  ping.js  reboot.js  removeattachment.js  setup.js  showconfig.js  silentdeny.js  stats.js  suggest.js  support.js  unblacklist.js  verify.js  vote.js  whitelist.js
commands/admin/: acknowledgement.js  allowlist.js  basiceval.js  botconfig.js  db.js  deploy.js  eval.js  flags.js  globalban.js  megabean.js  nukebean.js  reboot.js  shell.js  showconfig.js  whitelist.js
commands/configuration/: autosetup.js  config.js  module.json  setup.js
commands/developer/: db.js  deploy.js  eval.js  flags.js  module.json  reboot.js  shell.js
commands/moderator/: block.js  exempt.js  module.json  unblock.js
commands/other/: bean.js  blacklisttemp.js  changelog.js  docs.js  follow.js  github.js  help.js  hypernukebean.js  invite.js  locale.js  megabean.js  module.json  notify.js  nukebean.js  ping.js  prefix.js  privacy.js  protips.js  selfnotify.js  shard.js  shards.js  stats.js  suggest.js  support.js  tutorial.js  unfollow.js  verify.js  vote.js
commands/review/: approve.js  approveedit.js  deny.js  denyedit.js  dupe.js  listqueue.js  massapprove.js  massdeny.js  module.json  silentdelete.js  silentdeny.js
commands/server admin/: autosetup.js  bean.js  config.js  import.js  setup.js
commands/server moderator/: acomment.js  approve.js  attach.js  bean.js  blacklist.js  block.js  comment.js  delete.js  deletecomment.js  deny.js  info.js  listqueue.js  mark.js  massapprove.js  massdelete.js  massdeny.js  removeattachment.js  silentdelete.js  silentdeny.js  top.js  unblacklist.js  unblock.js
commands/staff/: acknowledgement.js  globalban.js  module.json
commands/suggestions/: acomment.js  asuggest.js  attach.js  comment.js  delete.js  deletecomment.js  down.js  edit.js  editcomment.js  import.js  info.js  mark.js  massdelete.js  module.json  removeattachment.js  search.js  shortinfo.js  silentdelete.js  suggest.js  top.js
events/: debug.js  disconnect.js  error.js  guildCreate.js  guildDelete.js  message.js  messageDelete.js  messageReactionAdd.js  messageReactionRemove.js  rateLimit.js  ready.js  resume.js  warn.js
lang/: common.ftl
lang/en-US/: translations.ftl
lib/: index.ts
lib/cache/: index.ts  instance.ts
lib/db/: index.ts
lib/db/store/: guildConfig.ts  index.ts  instance.ts  instanceGuild.ts  suggestion.ts  suggestionFeed.ts
lib/framework/: command.ts  context.ts  index.ts  module.ts
lib/struct/: config.ts  context.ts  index.ts  lang.ts  sentry.ts
lib/types/@types/node/: index.d.ts
lib/util/: index.ts  verifyInteraction.ts
prisma/: init.sql  schema.prisma
prisma/migrations/20211014225515_create_tables/: migration.sql
prisma/migrations/20220218040644_create_instance_tables/: migration.sql
prisma/migrations/20220218153737_create_instance_tables/: migration.sql
prisma/migrations/20220219000933_create_tables/: migration.sql
prisma/migrations/20220623032407_create_tables/: migration.sql
prisma/migrations/20220623054123_add_default_column_to_feeds/: migration.sql
protos/: caches.proto
scripts/: bootstrap_bazelrc.sh  clean_protos  commandJSON.ts  createCommands.ts  make_protos  seed.ts
services/commands/: .gitignore  .prettierrc.js  BUILD.bazel  package.json  project.json  tsconfig.json
services/commands/scripts/: createCommands.ts
services/commands/src/: constants.ts  index.ts
services/commands/src/cmds/config/: index.ts
services/commands/src/cmds/config/feeds/: create.ts  delete.ts  get.ts  index.ts
services/commands/src/cmds/config/feeds/edit/: index.ts  set.ts  unset.ts
services/commands/src/cmds/misc/: changelog.ts  github.ts  index.ts  invite.ts  ping.ts  privacy.ts  support.ts  vote.ts
services/commands/src/cmds/suggestion/: attach.ts  review.ts  suggest.ts  vote.ts
services/commands/src/cmds/suggestion/review/: approve.ts  approveDeny.ts  index.ts  listQueue.ts  mark.ts
services/commands/src/cmds/suggestion/suggestions/: create.ts  delete.ts  edit.ts  index.ts  info.ts  search.ts
services/commands/src/util/: commandComponents.ts
slash_commands/: asuggest.js
src/: index.ts
src/cmds/misc/: github.ts  index.ts  invite.ts  ping.ts  privacy.ts  support.ts  vote.ts
src/cmds/misc/test/: a.ts  b.ts  index.ts
src/cmds/suggestion/: index.ts  suggest.ts
src/routes/: interactions.ts
utils/: Client.js  Persistent.js  actions.js  cache.js  checks.js  config.js  db.js  logs.js  misc.js  permissions.json  schemas.js  strings.js  tip.js  trello.js
utils/Structures/: Guild.js  GuildMember.js  User.js  VoiceChannel.js
