load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# --- downlaod rules ---

# http_archive(
#   name = "rules_nodejs",
#   sha256 = "764a3b3757bb8c3c6a02ba3344731a3d71e558220adcb0cf7e43c9bba2c37ba8",
#   urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/5.8.2/rules_nodejs-core-5.8.2.tar.gz"],
# )

http_archive(
  name = "rules_nodejs",
  sha256 = "355b4c308db22dd75b7755db8609f1d18b347f194cf902bad890afbd18c25750",
  urls = ["https://github.com/bazelbuild/rules_nodejs/archive/refs/heads/stable.zip"],
  strip_prefix = "rules_nodejs-stable",
)

http_archive(
  name = "aspect_rules_js",
  sha256 = "a592fafd8a27b2828318cebbda0003686c6da3318df366b563e8beeffa05a02c",
  strip_prefix = "rules_js-1.21.0",
  url = "https://github.com/aspect-build/rules_js/releases/download/v1.21.0/rules_js-v1.21.0.tar.gz",
)

http_archive(
  name = "aspect_rules_ts",
  sha256 = "58b6c0ad158fc42883dafa157f1a25cddd65bcd788a772620192ac9ceefa0d78",
  strip_prefix = "rules_ts-1.3.2",
  url = "https://github.com/aspect-build/rules_ts/releases/download/v1.3.2/rules_ts-v1.3.2.tar.gz",
)

http_archive(
  name = "rules_fluent_types",
  url = "https://github.com/Benricheson101/rules_fluent_types/archive/397d04ac3369b490b8b57d5f95dca81f9d0c193d.tar.gz",
  sha256 = "603f0e4fd7102fbfaea98b3b1337954fe2401ed655af0f156be486c2210f5bc4",
  strip_prefix = "rules_fluent_types-397d04ac3369b490b8b57d5f95dca81f9d0c193d",
)

http_archive(
  name = "io_bazel_rules_docker",
  sha256 = "b1e80761a8a8243d03ebca8845e9cc1ba6c82ce7c5179ce2b295cd36f7e394bf",
  urls = ["https://github.com/bazelbuild/rules_docker/releases/download/v0.25.0/rules_docker-v0.25.0.tar.gz"],
)

http_archive(
  name = "io_bazel_rules_go",
  sha256 = "dd926a88a564a9246713a9c00b35315f54cbd46b31a26d5d8fb264c07045f05d",
  urls = [
    "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.38.1/rules_go-v0.38.1.zip",
    "https://github.com/bazelbuild/rules_go/releases/download/v0.38.1/rules_go-v0.38.1.zip",
  ],
)

http_archive(
  name = "bazel_gazelle",
  sha256 = "ecba0f04f96b4960a5b250c8e8eeec42281035970aa8852dda73098274d14a1d",
  urls = [
    "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.29.0/bazel-gazelle-v0.29.0.tar.gz",
    "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.29.0/bazel-gazelle-v0.29.0.tar.gz",
  ],
)

# --- setup toolchains ---


load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")
rules_js_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl", "nodejs_register_toolchains")
nodejs_register_toolchains(
  name = "nodejs",
  node_version = "18.15.0",
)

load("@aspect_rules_js//npm:npm_import.bzl", "npm_translate_lock")
npm_translate_lock(
  name = "npm",
  pnpm_lock = "//:pnpm-lock.yaml",
  verify_node_modules_ignored = "//:.bazelignore",
)

load("@npm//:repositories.bzl", "npm_repositories")
npm_repositories()

load("@aspect_rules_ts//ts:repositories.bzl", "rules_ts_dependencies")
rules_ts_dependencies(
  ts_version_from = "//:package.json",
)

load("@rules_fluent_types//:deps.bzl", "register_fluent_types_toolchain")
register_fluent_types_toolchain()

# TODO: pull language files and build docker image

# workaround for rules_docker not working on M1 macs
# load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
# go_rules_dependencies()
# go_register_toolchains(version = "1.19.5")

# load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")
# gazelle_dependencies(
#   go_repository_default_config = "//:WORKSPACE.bazel"
# )

# load(
#   "@io_bazel_rules_docker//repositories:repositories.bzl",
#   container_repositories = "repositories",
# )

# container_repositories()

# load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")
# container_deps(
#   go_repository_default_config = "@//:WORKSPACE.bazel",
# )

# load(
#   "@io_bazel_rules_docker//container:container.bzl",
#   "container_pull",
# )
# container_pull(
#   name = "node19_base",
#   registry = "docker.io",
#   repository = "node",
#   digest = "sha256:ff7e511abfa57825e17a0655896cf9a644450179f6fa3159ec9813e4c2b87625",
# )
